
- mid plane of twod grids in now a varaible (for pointwise)
- ref_export learned to extract twod grid to meshb format

Tue, Feb  3, 2015 : Released Refine 1.8.15

- implemented isotropic gradation control of anisotropic metric
- added Barral/McKenzie metric intersection
- quieted parMETIS debug statements that crashed MPI stdout buffers
- extended ref_inflatable use an origin at mean of Z min/max
- extended ref_inflatable to have an optional angle of attack argument

Mon, Apr 14, 2014 : Released Refine 1.8.14

- added missing BEGIN_C_DECLORATION C/C++ compatibility macros that
    should come in pairs

Mon, Mar 24, 2014 : Released Refine 1.8.13

- fix header error on SGI ICE due to wrong include location of parmetis.h
- eliminated compiler warnings 

Mon, Mar 10, 2014 : Released Refine 1.8.12

- allow use of older ParMETIS 3.* bindings

Wed, Feb 19, 2014 : Released Refine 1.8.11

- added ParMETIS bindings for testing with FUN3D
- ref_translate learned --shift
- overhaul of metric intersection to use more robust matrix sqrt

Mon, Jan 13, 2014 : Released Refine 1.8.10

- started software process and classification report
- started linearization of mean ratio quality
- meshb export, soln import of metric, fun3d .metric to soln converter
- ref_inflatable can extrude normally and radially  
- turned off ref_metric_sanitize metric SMR in fortran interface
- increased robustness of matrix inverse with pivot in metric SMR

Wed, Mar 13, 2013 : Released Refine 1.8.9

- Zoltan GRAPH LB_METHOD required callbacks added.
- improved load balancing for part boundary adapt
- fixed edge-based primitive logic
- add grid inflation (ref_inflatable) for sonic boom grids
- renamed convert to ref_translate; ref_projectable; ref_axisymmetric
- mem leak in gridparallelswap addressed
- x3d html output
- little endian .lb8.ugrid import
- removed dpw cruft
- removed ruby-wrapped unit tests to fix fun3d makedistcheck
- removed old refine executables

Wed Sep 12, 2012 : Released Refine 1.8.8
