@@ -117,6 +117,7 @@ REF_STATUS FC_FUNC_(ref_fortran_adapt,REF_FORTRAN_ADAPT)( void )
 {
   REF_INT passes, i;
   REF_INT ntet, npri;
+  REF_BOOL single_partition_adaptation = REF_TRUE;
 
   RSS( ref_gather_ncell( ref_grid_node(ref_grid), 
 			 ref_grid_tet(ref_grid), &ntet ), "ntet");
@@ -162,9 +163,9 @@ REF_STATUS FC_FUNC_(ref_fortran_adapt,REF_FORTRAN_ADAPT)( void )
       ref_mpi_stopwatch_stop("pass");
       RSS(ref_validation_cell_volume(ref_grid),"vol");
       RSS( ref_histogram_ratio( ref_grid ), "gram");
-      if ( ref_grid_twod(ref_grid) )
+      if ( single_partition_adaptation )
 	{
-	  if ( ref_mpi_master ) printf("twod single image\n");
+	  if ( ref_mpi_master ) printf("use single parition\n");
 	  RSS(ref_migrate_to_single_image(ref_grid),"balance");
 	}
       else
