@@ -1,4 +1,5 @@
 
+- refine/two fortran binding uses a single partition
 - mid plane of twod grids in now a varaible (for pointwise)
 - ref_export learned to extract twod grid to meshb format
 
